added listing for roles and customers

--- a/src/.env.local
+++ b/src/.env.local
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:m1VyL7YCzLMyZasWF4Fq6w+fE+cTvgvRIiD8KVPlKIU=
+APP_KEY=base64:mtpWlKrC4R6OfzJ1n5gZezm3gPneo3g52+tN8H2e4o0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080/
+ASSET_URL=http://localhost:8080
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
